<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lighterGray"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/text"
            android:text="@string/friendly_notice"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layoutDirection="ltr"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ignore"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@color/lightGray"
            android:text="@string/ignore"
            android:textColor="@color/text"/>
        <Button
            android:id="@+id/okay"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@color/primaryDark"
            android:text="@string/ok"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>

